# Vela

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  portfolio.csv  pyproject.toml  watchlist.csv
.github/workflows/: ci.yml
data/processed/snapshots/: 2026-06-14-weekly.json  NVDA-2026-06-14.json
docs/: PHASE0_PLAN.md  REVIEW_CHECKLIST.md  ROADMAP.md  SELF_REVIEW.md  context_packs.md  data_sources.md
docs/superpowers/plans/: 2026-06-15-phase1-snapshots.md
memory/: glossary.md  investment_policy.md  portfolio_rules.md  thesis_log.md  watchlist_reasoning.md
routines/: 0800_macro_scan.md  1500_premarket_review.md  1600_market_open_check.md  2130_end_of_day_review.md  friday_weekly_review.md
src/vela/: __init__.py  cli.py  constants.py  context_pack.py  fetch_macro.py  fetch_prices.py  fetch_sec_filings.py  generate_report.py  load_portfolio.py  load_watchlist.py  models.py  score_ticker.py  snapshots.py
tests/: test_cli.py  test_context_pack.py  test_data_sources.py  test_generate_report.py  test_loaders.py  test_scoring.py  test_snapshots.py
