[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vela-research"
version = "0.1.0"
description = "ETF-first AI investment research OS for learning and thesis tracking."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Seungjae Hong" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vela = "vela.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
